# platform.upstream.dbus

./: .gbs.conf  COPYING  LICENSE.AFL2.1  LICENSE.BSD2.0  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  dbus-1.6.12.tar.gz.delta  dbus-1.6.12.tar.gz.id  dbus-1.6.8.tar.gz.delta  dbus-1.6.8.tar.gz.id  project.config
bus/: Makefile.am  Makefile.in  activation.c  bus.c  bus.h  check.c  check.h  config-parser-common.c  config-parser-common.h  config-parser.c  connection.c  connection.h  cynara.c  cynara.h  dbus.service.in  dispatch.c  dispatch.h  driver.c  driver.h  kdbus-d.c  kdbus-d.h  main.c  policy.c  policy.h  services.c  services.h  session.conf.in  smack.c  smack.h  stats.c  system.conf.in
cmake/: CMakeLists.txt
cmake/bus/: CMakeLists.txt
cmake/dbus/: CMakeLists.txt
dbus/: .cproject  .project  Makefile.am  Makefile.in  dbus-asv-util.c  dbus-asv-util.h  dbus-auth.c  dbus-auth.h  dbus-bus.c  dbus-bus.h  dbus-connection-internal.h  dbus-connection.c  dbus-connection.h  dbus-internals.h  dbus-list.c  dbus-list.h  dbus-marshal-gvariant.c  dbus-marshal-gvariant.h  dbus-marshal-header.c  dbus-marshal-header.h  dbus-marshal-recursive.c  dbus-marshal-recursive.h  dbus-message-internal.h  dbus-message-private.h  dbus-message.c  dbus-message.h  dbus-pending-call.c  dbus-server-unix.c  dbus-server.c  dbus-server.h  dbus-shared.h  dbus-signals.c  dbus-spawn.c  dbus-sysdeps-pthread.c  dbus-sysdeps-unix.c  dbus-sysdeps-win.c  dbus-sysdeps.h  dbus-threads.c  dbus-transport-kdbus.c  dbus-transport-kdbus.h  (+10 more)
doc/: Makefile.in  dbus-faq.html  dbus-specification.html  dbus-specification.xml  dbus-test-plan.html
doc-kdbus/: HOWTO.txt  status.txt
packaging/: baselibs.conf  com.samsung.dbus.spec  dbus-user.service  dbus-x11.spec  dbus-x11.spec.in  dbus.changes  dbus.sh  dbus.spec  libdbus.spec  libdbuspolicy.spec  pre_checkin.sh  switch-to-dbus.sh  switch-to-kdbus.sh  system.conf
policy/: Makefile.am  README  dbus-policy.c  dbus-policy.h
samsung_tools/: Makefile  client.c  serwer.c  test-foxp-latency
samsung_tools/test_foxp_latency/: Makefile  README  ping-client.c  ping-server.c  test-foxp-latency
samsung_tools/test_foxp_latency/packaging/: test_foxp_ping.spec  test_foxp_ping.yaml
test/: Makefile.am  Makefile.in  marshal.c
test/data/invalid-config-files/: badcheck-1.conf  badcheck-2.conf
test/data/valid-config-files/: .gitignore  check-1.conf  debug-check-some.conf.in
test/name-test/: Makefile.in
tools/: Makefile.in  dbus-launch.c
